--- a/package.json
+++ b/package.json
@@ -1,124 +1,120 @@
 {
-  "name": "zustand-middleware-computed-state",
-  "private": true,
-  "version": "0.1.0",
-  "description": "Computed state middleware for Zustand",
-  "main": "index.cjs.js",
-  "module": "index.js",
-  "types": "index.d.ts",
-  "files": [
-    "**"
-  ],
-  "sideEffects": false,
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "rollup -c",
-    "postbuild": "yarn copy",
-    "eslint": "eslint --fix 'src/**/*.{js,ts,jsx,tsx}'",
-    "eslint-examples": "eslint --fix 'examples/src/**/*.{js,ts,jsx,tsx}'",
-    "eslint:ci": "eslint '{src,examples/src}/**/*.{js,ts,jsx,tsx}'",
-    "prepare": "yarn build",
-    "pretest": "tsc --noEmit",
-    "test": "jest",
-    "test:dev": "jest --watch --no-coverage",
-    "test:coverage:watch": "jest --watch",
-    "copy": "mv dist/src/* dist && rm -rf dist/{src,tests} && copyfiles -f package.json readme.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.husky=undefined; this.prettier=undefined; this.jest=undefined; this['lint-staged']=undefined;\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "name": "zustand-middleware-computed-state",
+    "private": true,
+    "version": "0.1.0",
+    "description": "Computed state middleware for Zustand",
+    "main": "index.cjs.js",
+    "module": "index.js",
+    "types": "index.d.ts",
+    "files": [
+        "**"
+    ],
+    "sideEffects": false,
+    "scripts": {
+        "prebuild": "rimraf dist",
+        "build": "rollup -c --bundleConfigAsCjs",
+        "postbuild": "yarn copy",
+        "eslint": "eslint --fix 'src/**/*.{js,ts,jsx,tsx}'",
+        "eslint-examples": "eslint --fix 'examples/src/**/*.{js,ts,jsx,tsx}'",
+        "eslint:ci": "eslint '{src,examples/src}/**/*.{js,ts,jsx,tsx}'",
+        "prepare": "yarn build",
+        "postinstall": "husky install",
+        "pretest": "tsc --noEmit",
+        "test": "jest",
+        "test:dev": "jest --watch --no-coverage",
+        "test:coverage:watch": "jest --watch",
+        "copy": "mv dist/src/* dist && rm -rf dist/{src,tests} && copyfiles -f package.json readme.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.husky=undefined; this.prettier=undefined; this.jest=undefined; this['lint-staged']=undefined;\""
+    },
+    "prettier": {
+        "semi": false,
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "jsxBracketSameLine": true,
+        "tabWidth": 2,
+        "printWidth": 80
+    },
+    "lint-staged": {
+        "*.{js,ts,tsx}": [
+            "prettier --write"
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cmlarsen/zustand-middleware-computed-state.git"
+    },
+    "keywords": [
+        "react",
+        "state",
+        "manager",
+        "management",
+        "redux",
+        "store",
+        "zustand",
+        "computed",
+        "derived",
+        "selector",
+        "middleware"
+    ],
+    "author": "Caleb Larsen",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/cmlarsen/zustand-middleware-computed-state/issues"
+    },
+    "homepage": "https://github.com/cmlarsen/zustand-middleware-computed-state",
+    "jest": {
+        "testRegex": "test.(js|ts|tsx)$",
+        "coverageDirectory": "./coverage/",
+        "collectCoverage": true,
+        "coverageReporters": [
+            "json",
+            "html",
+            "text",
+            "text-summary"
+        ],
+        "collectCoverageFrom": [
+            "src/**/*.{js,ts,tsx}",
+            "tests/**/*.{js,ts,tsx}"
+        ],
+        "modulePathIgnorePatterns": [
+            "dist/"
+        ]
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.12",
+        "@babel/plugin-external-helpers": "^7.18.6",
+        "@babel/plugin-transform-react-jsx": "^7.20.13",
+        "@babel/plugin-transform-runtime": "^7.19.6",
+        "@babel/plugin-transform-typescript": "^7.20.13",
+        "@babel/preset-env": "^7.20.2",
+        "@rollup/plugin-babel": "^6.0.3",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-typescript": "^11.0.0",
+        "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.4.0",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.50.0",
+        "@typescript-eslint/parser": "^5.50.0",
+        "copyfiles": "^2.4.1",
+        "eslint": "^8.33.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "husky": "^8.0.3",
+        "jest": "^29.4.1",
+        "json": "^11.0.0",
+        "lint-staged": "^13.1.0",
+        "prettier": "^2.8.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "rimraf": "^4.1.2",
+        "rollup": "^3.12.0",
+        "rollup-plugin-size-snapshot": "^0.12.0",
+        "typescript": "^4.9.5",
+        "zustand": "^4.3.2"
     }
-  },
-  "prettier": {
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "jsxBracketSameLine": true,
-    "tabWidth": 2,
-    "printWidth": 80
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "prettier --write"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cmlarsen/zustand-middleware-computed-state.git"
-  },
-  "keywords": [
-    "react",
-    "state",
-    "manager",
-    "management",
-    "redux",
-    "store",
-    "zustand",
-    "computed",
-    "derived",
-    "selector",
-    "middleware"
-  ],
-  "author": "Caleb Larsen",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cmlarsen/zustand-middleware-computed-state/issues"
-  },
-  "homepage": "https://github.com/cmlarsen/zustand-middleware-computed-state",
-  "jest": {
-    "testRegex": "test.(js|ts|tsx)$",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,ts,tsx}",
-      "tests/**/*.{js,ts,tsx}"
-    ],
-    "modulePathIgnorePatterns": [
-      "dist/"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-external-helpers": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.11",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/plugin-transform-typescript": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@testing-library/react": "^11.2.2",
-    "@types/jest": "^26.0.19",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "copyfiles": "^2.4.1",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.6",
-    "jest": "^26.6.3",
-    "json": "^10.0.0",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.35.1",
-    "rollup-plugin-size-snapshot": "^0.12.0",
-    "typescript": "^4.1.3",
-    "zustand": "^3.2.0"
-  }
 }
