--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zustand-middleware-computed-state",
-    "private": true,
+    "private": false,
     "version": "0.1.1",
     "description": "Computed state middleware for Zustand",
     "main": "index.cjs.js",
