publish correct package to npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "zustand-middleware-computed-state",
-    "private": false,
-    "version": "0.1.1",
+    "private": true,
+    "version": "0.1.2",
     "description": "Computed state middleware for Zustand",
     "main": "index.cjs.js",
     "module": "index.js",
